--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/common": "4.3.1",
-        "@angular/compiler": "4.3.1",
-        "@angular/compiler-cli": "4.3.1",
-        "@angular/core": "4.3.1",
-        "@angular/forms": "4.3.1",
-        "@angular/http": "4.3.1",
-        "@angular/platform-browser": "4.3.1",
-        "@angular/platform-browser-dynamic": "4.3.1",
+        "@angular/common": "4.1.3",
+        "@angular/compiler": "4.1.3",
+        "@angular/compiler-cli": "4.1.3",
+        "@angular/core": "4.1.3",
+        "@angular/forms": "4.1.3",
+        "@angular/http": "4.1.3",
+        "@angular/platform-browser": "4.1.3",
+        "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/core": "4.1.0",
         "@ionic-native/geolocation": "4.1.0",
         "@ionic-native/splash-screen": "4.1.0",
@@ -35,16 +35,16 @@
         "cordova-plugin-whitelist": "^1.3.2",
         "crypto-md5": "^1.0.0",
         "firebase": "4.1.3",
-        "ionic-angular": "3.5.3",
+        "ionic-angular": "^3.5.3",
         "ionic-gallery-modal": "0.2.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionic2-rating": "^1.2.2",
         "ionicons": "^3.0.0",
         "ng2-charts": "^1.6.0",
         "promise-polyfill": "^6.0.2",
-        "rxjs": "^5.4.0",
+        "rxjs": "~5.4.2",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.12"
+        "zone.js": "~0.8.14"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
