--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "clean": "ionic-app-scripts clean",
         "build": "ionic-app-scripts build",
         "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build",
+        "ionic:build": "ionic-app-scripts build --prod",
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
@@ -33,10 +33,10 @@
         "cordova-plugin-splashscreen": "4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
-        "crypto-md5": "^1.0.0",
+        "crypto-md5": "1.0.0",
         "firebase": "4.1.3",
         "ionic-angular": "^3.5.3",
-        "ionic-gallery-modal": "0.2.1",
+        "ionic-gallery-modal": "0.1.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionic2-rating": "^1.2.2",
         "ionicons": "^3.0.0",
