--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,10 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
-*~
-*.sw[mnpcod]
-*.log
-*.tmp
-*.tmp.*
-log.txt
-*.sublime-project
-*.sublime-workspace
 .vscode/
 npm-debug.log*
 
+.sourcemaps
 .idea/
 .sass-cache/
 .tmp/
