--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/common": "4.1.3",
-        "@angular/compiler": "4.1.3",
-        "@angular/compiler-cli": "4.1.3",
-        "@angular/core": "4.1.3",
-        "@angular/forms": "4.1.3",
-        "@angular/http": "4.1.3",
-        "@angular/platform-browser": "4.1.3",
-        "@angular/platform-browser-dynamic": "4.1.3",
-        "@ionic-native/core": "4.1.0",
-        "@ionic-native/geolocation": "4.1.0",
-        "@ionic-native/splash-screen": "4.1.0",
-        "@ionic-native/status-bar": "4.1.0",
+        "@angular/common": "4.4.4",
+        "@angular/compiler": "4.4.4",
+        "@angular/compiler-cli": "4.4.4",
+        "@angular/core": "4.4.4",
+        "@angular/forms": "4.4.4",
+        "@angular/http": "4.4.4",
+        "@angular/platform-browser": "4.4.4",
+        "@angular/platform-browser-dynamic": "4.4.4",
+        "@ionic-native/core": "4.3.2",
+        "@ionic-native/geolocation": "4.3.2",
+        "@ionic-native/splash-screen": "4.3.2",
+        "@ionic-native/status-bar": "4.3.2",
         "@ionic/storage": "2.0.1",
         "angularfire2": "^4.0.0-rc.1",
         "chart.js": "^2.6.0",
@@ -35,7 +35,7 @@
         "cordova-plugin-whitelist": "^1.3.2",
         "crypto-md5": "1.0.0",
         "firebase": "4.1.3",
-        "ionic-angular": "^3.5.3",
+        "ionic-angular": "3.8.0",
         "ionic-gallery-modal": "0.2.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionic2-rating": "^1.2.2",
@@ -47,10 +47,8 @@
         "zone.js": "~0.8.14"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "1.3.7",
-        "@ionic/cli-plugin-cordova": "^1.4.1",
-        "@ionic/cli-plugin-ionic-angular": "1.3.2",
-        "typescript": "2.3.3"
+        "@ionic/app-scripts": "3.0.1",
+        "typescript": "2.5.3"
     },
     "cordovaPlugins": [
         "cordova-plugin-whitelist",
